[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "Two-stage Robust Qualification Management"
version = "0.1.0"
description = "Implementation of column-and-constraint generation approach to solve simplified qualification management problem"
authors = [
    {name = "Antoine Perraudat", email = "antoine.perraudat@outlook.fr"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=2.4.3",
    "highspy>=1.13.1",
    "tqdm>=4.67.1"
]
