[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "RobustQualificationManagement"
version = "0.1.0"
description = "Implementation of column-and-constraint generation approach to solve simplified stochastic qualification management problem"
authors = [
    {name = "Antoine Perraudat", email = "antoine.perraudat@outlook.fr"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2",
    "numpy>=2.4.3",
    "highspy>=1.13.1",
    "tqdm>=4.67.1",
    "pyomo>=6.10.0"
]
